[package]
name = "chatsounds"
version = "0.2.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2021"
publish = false

[features]
default = ["fs", "playback", "rayon", "mp3", "vorbis", "wav"]
fs = ["tokio"]
memory = ["async-lock"]
mp3 = ["rodio/mp3"]
playback = []
vorbis = ["rodio/vorbis"]
wasm = ["getrandom/wasm_js", "rodio/wasm-bindgen"]
wav = ["rodio/wav"]

[dependencies]
async-lock = { version = "=3.4.0", optional = true }
bytes = "=1.10.0"
futures = "=0.3.31"
getrandom = "=0.3.1"
nom = "=8.0.0"
rand = "=0.9.0"
rayon = { version = "=1.10.0", optional = true }
reqwest = "=0.12.12"
rmp-serde = "=1.3.0"
rodio = { version = "=0.20.1", default-features = false }
serde = { version = "=1.0.218", features = ["derive"] }
serde_json = "=1.0.139"
sha2 = "=0.10.8"
thiserror = "=2.0.11"
tokio = { version = "=1.43.1", features = ["fs", "macros"], optional = true }
twoway = "=0.2.2"
