[package]
name = "chatsounds"
version = "1.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2021"
publish = false

[features]
default = ["fs", "playback", "rayon", "mp3", "vorbis", "wav"]
fs = ["tokio"]
memory = ["async-lock"]
mp3 = ["rodio/mp3"]
playback = []
vorbis = ["rodio/vorbis"]
wasm = ["getrandom/wasm_js", "rodio/wasm-bindgen"]
wav = ["rodio/wav"]

[dependencies]
async-lock = { version = "3", optional = true }
bytes = "1"
futures = "0.3"
getrandom = "0.3"
nom = "8"
rand = "0.9"
rayon = { version = "1", optional = true }
reqwest = "0.12"
rmp-serde = "1"
rodio = { version = "0.20", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros"], optional = true }
twoway = "0.2"
